--- a/index.html
+++ b/index.html
@@ -8,11 +8,17 @@
 </head>
 <body>
     <div class="container">
-        <h1>I wanna be with youwo for the resht of my lifeo!</h1>
+        <div class="fairies"></div>
+        
         <div class="characters">
             <img src="https://i.imgur.com/4Zl4YvG.png" alt="Chubby Bunny" class="chubby-bunny">
             <img src="https://i.imgur.com/EZ1q6kU.png" alt="Big Bear" class="big-bear">
         </div>
+
+        <h1 class="bubbly-text">I wanna be with youwo for the resht of my lifeo!</h1>
     </div>
+
+    <!-- Fairy Animation -->
+    <div class="fairy-animation"></div>
 </body>
 </html>
