--- a/index.html
+++ b/index.html
@@ -1,24 +1,144 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Magical Love Page</title>
-    <link rel="stylesheet" href="style.css">
-</head>
-<body>
-    <div class="container">
-        <div class="fairies"></div>
-        
-        <div class="characters">
-            <img src="https://i.imgur.com/4Zl4YvG.png" alt="Chubby Bunny" class="chubby-bunny">
-            <img src="https://i.imgur.com/EZ1q6kU.png" alt="Big Bear" class="big-bear">
-        </div>
+/* General body and background styling */
+body {
+    margin: 0;
+    padding: 0;
+    font-family: 'Comic Sans MS', cursive, sans-serif;
+    background: url('https://i.imgur.com/f4gYcGG.jpg') no-repeat center center fixed;
+    background-size: cover;
+    height: 100vh;
+    overflow: hidden;
+    cursor: none; /* Hide the default cursor */
+    position: relative;
+}
 
-        <h1 class="bubbly-text">I wanna be with youwo for the resht of my lifeo!</h1>
-    </div>
+/* Magical Fairy Background */
+.fairy-background {
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    pointer-events: none;
+    z-index: 1;
+}
 
-    <!-- Fairy Animation -->
-    <div class="fairy-animation"></div>
-</body>
-</html>
+/* Flying Fairies */
+.fairy {
+    position: absolute;
+    width: 80px;
+    height: 80px;
+    background: url('https://i.imgur.com/qkdX4RU.png') no-repeat center center;
+    background-size: contain;
+    opacity: 0.9;
+    animation: fly 10s linear infinite;
+}
+
+#fairy1 {
+    top: 10%;
+    left: 20%;
+}
+
+#fairy2 {
+    top: 40%;
+    left: 70%;
+    animation-duration: 8s;
+}
+
+#fairy3 {
+    top: 70%;
+    left: 50%;
+    animation-duration: 12s;
+}
+
+/* Fairy flying animation */
+@keyframes fly {
+    0% { transform: translate(0, 0) scale(1); }
+    50% { transform: translate(100px, -200px) scale(1.2); }
+    100% { transform: translate(-100px, 200px) scale(1); }
+}
+
+/* Floating bunny and bear characters */
+.characters {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin-top: 100px;
+    position: relative;
+    z-index: 2;
+}
+
+.chubby-bunny, .big-bear {
+    width: 150px;
+    height: auto;
+    animation: float 5s ease-in-out infinite;
+}
+
+.chubby-bunny {
+    margin-right: 20px;
+}
+
+.big-bear {
+    margin-left: 20px;
+}
+
+/* Float animation for characters */
+@keyframes float {
+    0%, 100% {
+        transform: translateY(0);
+    }
+    50% {
+        transform: translateY(-20px);
+    }
+}
+
+/* Magical 3D Text */
+.magical-text {
+    font-size: 2.5em;
+    color: #fff;
+    text-shadow: 0 1px 0 #ccc, 0 2px 0 #c9c9c9, 0 3px 0 #bbb, 0 4px 0 #b9b9b9, 0 5px 0 #aaa,
+                 0 6px 1px rgba(0, 0, 0, 0.1), 0 0 5px rgba(0, 0, 0, 0.3), 0 1px 3px rgba(0, 0, 0, 0.3);
+    position: absolute;
+    bottom: 10%;
+    left: 50%;
+    transform: translateX(-50%);
+    animation: bounce 3s ease-in-out infinite;
+}
+
+/* Bounce text animation */
+@keyframes bounce {
+    0%, 100% {
+        transform: translate(-50%, 0);
+    }
+    50% {
+        transform: translate(-50%, -20px);
+    }
+}
+
+/* Cursor as a bunny */
+body::after {
+    content: '';
+    position: absolute;
+    width: 50px;
+    height: 50px;
+    background: url('https://i.imgur.com/4Zl4YvG.png') no-repeat center center;
+    background-size: contain;
+    pointer-events: none;
+    transform: translate(-50%, -50%);
+    z-index: 9999;
+}
+
+body {
+    cursor: none;
+}
+
+body:hover::after {
+    transform: translate(-50%, -50%);
+}
+
+@keyframes sparkle {
+    0%, 100% {
+        opacity: 0;
+    }
+    50% {
+        opacity: 1;
+    }
+}
+
